# taichi

./: CMakeLists.txt
cmake/: PythonNumpyPybind11.cmake  TaichiCore.cmake
mlir/: CMakeLists.txt
python/taichi/lang/: kernel_impl.py
python/taichi/qtype/: register.py
python/taichi/quantum/: __init__.py  gate.py  register.py  special.py
